- Omicron, Nanoeducator: X and Y spectra axis labels are set according to the
  imported spectrum type.
- Euclidean distance transform: Function for mask thinning was added.
- Mark by threshold: Percentage interpretation for inverted height was
  changed to be less confusing.
- Raw XYZ: The square image option is not enforced on regular grid data when
  it is not available in the dialog.

Other:
- Does not attempt to build the hdrimage module with C++ compiler unavailable.


2.39 (2014-11-14)
Application:
- Pango 1.10 and Cairo 1.2 are now required.
- The program should start with a saner working directory by default.
- Translations updated: Czech, French, Russian.
- New translation: Korean.

Libraries:
- libgwyddion: A function for copying GwySIValueFormat was added; the
  structure is also registered as a boxed type now.
- libgwydgets: gwy_axis_get_magnification_string() returns string for the new
  units after gwy_axis_set_si_unit().
- libgwydraw: Adaptive false colour mapping was improved by making it more
  adaptive.
- libgwydraw: It is possible to map user-given values to gradient positions
  using the same mapping as gwy_pixbuf_draw_data_field_adaptive() uses.
- libgwydgets: GwyColorAxis has a new ‘unlabelled’ ticks mode in which the
  interior ticks are drawn without labels.
- libgwydgets: GwyColorAxis permits specifying a non-linear value to gradient
  mapping function.
- libgwydgets: Crash when changing color maps in Gwy3DView with gtk+ version
  greater 2.29 was fixed.
- libgwyapp: When adaptive false colour mapping is used, the axis is set to
  the new ‘unlabelled’ mode so the mapping non-linearity can be seen.

Modules:
- Image export (new): Replaces image rendering in the pixmap module; can
  export to vector graphics formats: PDF, EPS and SVG.  The corresponding
  file types are called ‘pdfcairo’, ‘pngcairo’, etc.
- NX II (new): Imports EMSYS NX II AFM files.
- FemtoScan (new): Imports FemtoScan SPM files.