@@ -36,6 +36,7 @@ Modules:
   changed to be less confusing.
 - Raw XYZ: The square image option is not enforced on regular grid data when
   it is not available in the dialog.
+- WITec Project: WIT_PR06 recognized as another variant of magic header.
 
 Other:
 - Does not attempt to build the hdrimage module with C++ compiler unavailable.
